--- a/Code/Index.html
+++ b/Code/Index.html
@@ -149,7 +149,7 @@
                 <h3>Total Sum</h3> <!---value calculator toevoegen die alle items in de shoopingcart gebruikt-->
 
             </div>
-            <div class="hidden-element">
+            <div id="hidden-container" > 
                 <ul id="shooping-cart-list" class="product-list" >
                     <!--prijs en value veranderen naar twee aparte columns zodat het mooi overzichtelijk wordt-->
                 <!-- example to generate shooping cart item -->
